src/test/ui/issue-21449.stderr
error[E0574]: expected struct, variant or union type, found module `MyMod`
  --> $DIR/issue-21449.rs:14:17
   |
LL |     let myVar = MyMod { T: 0 };
   |                 ^^^^^ not a struct, variant or union type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0574`.
